--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,25 +7,49 @@
   display: flex;
   justify-content: space-between; }
 
-.serach {
+.add {
   display: inline-block;
-  transform: rotate(-45deg); }
-  .serach::before {
+  height: 21px;
+  width: 21px;
+  border: 1px solid #999;
+  border-radius: 50%;
+  transform: scale(1) rotate(0); }
+  .add::before {
     content: ' ';
     display: block;
-    height: 20px;
-    width: 20px;
-    border: 4px solid #000;
-    border-radius: 50%;
-    box-sizing: border-box; }
-  .serach::after {
+    height: 13px;
+    width: 0;
+    transform: translate(10px, 4px);
+    border-left: 1px solid #999; }
+  .add::after {
     content: ' ';
     display: block;
-    height: 0px;
-    width: 4px;
-    border-bottom: 14px solid #000;
-    border-radius: 5px;
-    transform: translate(8px, -4px); }
+    height: 0;
+    width: 13px;
+    transform: translate(4px, -3px);
+    border-top: 1px solid #999; }
+
+.close {
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  border: 1px solid #999;
+  border-radius: 50%;
+  transform: scale(1) rotate(45deg); }
+  .close::before {
+    content: ' ';
+    display: block;
+    height: 13px;
+    width: 0;
+    transform: translate(10px, 4px);
+    border-left: 1px solid #999; }
+  .close::after {
+    content: ' ';
+    display: block;
+    height: 0;
+    width: 13px;
+    transform: translate(4px, -3px);
+    border-top: 1px solid #999; }
 
 .refresh {
   display: inline-block;
@@ -41,7 +65,7 @@
     border-radius: 50%;
     border-right-color: transparent;
     box-sizing: border-box; }
-  .refresh:after {
+  .refresh::after {
     content: ' ';
     display: block;
     height: 0;
