--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,7 +17,7 @@
         box-sizing: border-box;
     }
 
-    &:after {
+    &::after {
         content: ' ';
         display: block;
         height: 0;
@@ -25,31 +25,6 @@
         border: 6px solid transparent;
         border-top-color: $color;
         transform: rotate(-44deg) translate(22px, -4px);
-    }
-}
-
-.serach {
-    display: inline-block;
-    transform: rotate(-45deg);
-
-    &::before {
-        content: ' ';
-        display: block;
-        height: 20px;
-        width: 20px;
-        border: 4px solid #000;
-        border-radius: 50%;
-        box-sizing: border-box;
-    }
-
-    &::after {
-        content: ' ';
-        display: block;
-        height: 0px;
-        width: 4px;
-        border-bottom: 14px solid #000;
-        border-radius: 5px;
-        transform: translate(8px, -4px);
     }
 }
 
@@ -100,6 +75,41 @@
         border-bottom: 4px solid $color;
         transform: translate(8px, -12px);
     }
+}
+
+@mixin css-icon-add($scale: 1, $color: #999, $rotate: 0) {
+    display: inline-block;
+    height: 21px;
+    width: 21px;
+    border: 1px solid $color;
+    border-radius: 50%;
+    transform: scale($scale) rotate($rotate);
+
+    &::before {
+        content: ' ';
+        display: block;
+        height: 13px;
+        width: 0;
+        transform: translate(10px, 4px);
+        border-left: 1px solid $color;
+    }
+
+    &::after {
+        content: ' ';
+        display: block;
+        height: 0;
+        width: 13px;
+        transform: translate(4px, -3px);
+        border-top: 1px solid $color;
+    }
+}
+
+.add {
+   @include css-icon-add()
+}
+
+.close {
+    @include css-icon-add(1, #999, 45deg)
 }
 
 
