--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,31 +7,16 @@
   display: flex;
   justify-content: space-between; }
 
-.serach {
-  display: inline-block;
-  transform: rotate(-45deg); }
-  .serach::before {
-    content: ' ';
-    display: block;
-    height: 20px;
-    width: 20px;
-    border: 4px solid #000;
-    border-radius: 50%;
-    box-sizing: border-box; }
-  .serach::after {
-    content: ' ';
-    display: block;
-    height: 0px;
-    width: 4px;
-    border-bottom: 14px solid #000;
-    border-radius: 5px;
-    transform: translate(8px, -4px); }
+.star {
+  height: 50px;
+  width: 50px;
+  border: 1px solid #000; }
 
 .refresh {
   display: inline-block;
-  transform: rotate(4deg) scale(1);
-  height: 30px;
-  width: 30px; }
+  transform: scale(1);
+  height: 20px;
+  width: 20px; }
   .refresh::before {
     content: ' ';
     display: block;
@@ -48,16 +33,18 @@
     width: 0;
     border: 6px solid transparent;
     border-top-color: #999;
-    transform: rotate(-44deg) translate(22px, -4px); }
+    transform: rotate(-45deg) translate(22px, -4px); }
 
 .serach {
   display: inline-block;
-  transform: rotate(-45deg) scale(1); }
+  transform: scale(1);
+  width: 20px;
+  height: 20px; }
   .serach::before {
     content: ' ';
     display: block;
-    height: 20px;
-    width: 20px;
+    height: 16px;
+    width: 16px;
     border: 4px solid #999;
     border-radius: 50%;
     box-sizing: border-box; }
@@ -66,14 +53,14 @@
     display: block;
     height: 0px;
     width: 4px;
-    border-bottom: 13px solid #999;
+    border-bottom: 10px solid #999;
     border-radius: 5px;
-    transform: translate(8px, -4px); }
+    transform: rotate(-45deg) translate(13px, 5px); }
 
 .tile {
   display: inline-block;
-  height: 30px;
-  width: 30px;
+  height: 20px;
+  width: 20px;
   transform: scale(1); }
   .tile::before {
     content: ' ';
