--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,9 +2,9 @@
 
 @mixin css-icon-refresh($scale: 1, $color: #999) {
     display: inline-block;
-    transform: rotate(4deg) scale($scale);
-    height: 30px;
-    width: 30px;
+    transform: scale($scale);
+    height: 20px;
+    width: 20px;
 
     &::before {
         content: ' ';
@@ -24,44 +24,21 @@
         width: 0;
         border: 6px solid transparent;
         border-top-color: $color;
-        transform: rotate(-44deg) translate(22px, -4px);
-    }
-}
-
-.serach {
-    display: inline-block;
-    transform: rotate(-45deg);
-
-    &::before {
-        content: ' ';
-        display: block;
-        height: 20px;
-        width: 20px;
-        border: 4px solid #000;
-        border-radius: 50%;
-        box-sizing: border-box;
-    }
-
-    &::after {
-        content: ' ';
-        display: block;
-        height: 0px;
-        width: 4px;
-        border-bottom: 14px solid #000;
-        border-radius: 5px;
-        transform: translate(8px, -4px);
+        transform: rotate(-45deg) translate(22px, -4px);
     }
 }
 
 @mixin css-icon-search($scale: 1, $color: #999) {
     display: inline-block;
-    transform: rotate(-45deg) scale($scale);
+    transform: scale($scale);
+    width: 20px;
+    height: 20px;
 
     &::before {
         content: ' ';
         display: block;
-        height: 20px;
-        width: 20px;
+        height: 16px;
+        width: 16px;
         border: 4px solid $color;
         border-radius: 50%;
         box-sizing: border-box;
@@ -72,16 +49,16 @@
         display: block;
         height: 0px;
         width: 4px;
-        border-bottom: 13px solid $color;
+        border-bottom: 10px solid $color;
         border-radius: 5px;
-        transform: translate(8px, -4px);
+        transform: rotate(-45deg) translate(13px, 5px);
     }
 }
 
 @mixin css-icon-tile($scale: 1, $color: #999) {
     display: inline-block;
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
     transform: scale($scale);
 
     &::before {
@@ -102,6 +79,36 @@
     }
 }
 
+// .star {
+//     display: inline-block;
+//     height: 20px;
+//     width: 20px;
+
+//     &:before,
+//     &:after {
+//         content: ' ';
+//         display: block;
+//         height: 80px;
+//         width: 50px;
+//         border-radius: 50px 50px 0 0;
+//         background-color: #000;
+//     }
+
+//     &:before {
+//         transform: rotate(-45deg) translate(1px, 2px);
+//         transform-origin: 0 100%;
+//     }
+
+//     &:after {
+//         transform: rotate(45deg) translate(-90px, -22px);
+//         transform-origin: 100% 100%;
+//     }
+// }
+.star {
+    height: 50px;
+    width: 50px;
+    border: 1px solid #000;
+}
 
 .refresh {
     @include css-icon-refresh()
